--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 
 :root {
     --clr-neutral-100: #fff;
@@ -7,7 +7,7 @@
     --clr-neutral-850: #181818;
     --clr-neutral-900: #000; 
 
-    --ff-primary: 'Roboto','Helvetica Neue',Arial;
+    --ff-primary: Roboto, Arial;
 
     --ff-body: var(--ff-primary);
     --ff-heading: var(--ff-primary);
@@ -27,7 +27,7 @@
     --fs-900: 11.6rem;
 
     --fs-body: var(--fs-400);
-    --fs-nav: var(--fs-500);
+    --fs-nav: var(--fs-300);
 }
 @media (min-width: 50em){
     :root {
@@ -43,7 +43,7 @@
         --fs-900: 11.6rem;
 
         --fs-body: var(--fs-400);
-        --fs-nav: var(--fs-500);
+        --fs-nav: var(--fs-300);
     }
 }
 
@@ -89,7 +89,9 @@
 .fw-regular {
     font-weight: var(--fw-regular);
 }
-
+* {
+    /* font-size: var(--fs-300); */
+}
 body {
     font-family: var(--ff-body);
     font-size: var(--fs-body);
@@ -97,14 +99,52 @@ body {
     color: var(--clr-neutral-800);
     background-color: var(--clr-neutral-200);
 }
+header {
+    font-family: var(--ff-heading);
+    font-weight: var(--fw-regular);
+    padding: 1rem;
+}
+nav {
+    font-size: var(--fs-nav);
+}
+a {
+    text-decoration: none;
+    color: var(--clr-neutral-100);
+}
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+.flex {
+    display: flex;
 }
 .container {
     max-width: 1800px;
     margin: 0 auto;
     padding: 0 1rem;
 }
+.nav-container {
+    width: 90%;
+    margin-inline: auto;
+}
+.nav-container a > img {
+    height: 60px;
+}
+.text-center {
+    text-align: center;
+}
+.align-items-center {
+    align-items: center;
+}
+.uppercase {
+    text-transform: uppercase;
+}
+.gap-small {
+    gap: 1rem;
+}
+.primary-navigation {
+    margin-left: 2rem;
+}
+
 
