--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
     --fs-300: 1rem;
     --fs-350: 1.25rem;
     --fs-400: 1.4rem;
+    --fs-500: 1.8rem;
     --fs-600: 2.4rem;
     --fs-625: 3rem;
     --fs-650: 3.2rem;
@@ -46,6 +47,13 @@
 }
 .text-neutral-900 {
     color: var(--clr-neutral-900);
+}
+
+.fs-300 {
+    font-size: var(--fs-300);
+}
+.fs-350 {
+    font-size: var(--fs-350);
 }
 
 .bg-neutral-100 {
@@ -97,6 +105,17 @@ ul {
     padding: 0;
     margin: 0;
 }
+h1 {
+    font-size: var(--fs-600);
+}
+.sticky {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+h2 {
+    font-size: var(--fs-500);
+}
 .flex {
     display: flex;
 }
@@ -105,12 +124,33 @@ ul {
     margin: 0 auto;
     padding: 0 1rem;
 }
-.nav-container {
-    width: 90%;
-    margin-inline: auto;
+.container-s {
+    max-width: 90%;
+    margin: 0 auto;
+    padding: 0 1rem;
 }
-.nav-container a > img {
+.container-s a > img {
     height: 60px;
+}
+
+.mt-1 {
+    margin-top: 2rem;
+}
+
+.mt-2 {
+    margin-top: 2rem;
+}
+.icon-list > li {
+    display: inline;
+}
+.image-col-2 > img {
+    width: 400px;
+}
+.justify-items-center {
+    justify-items: center;
+}
+.justify-content-center {
+    justify-content: center;
 }
 
 .text-center {
@@ -118,6 +158,9 @@ ul {
 }
 .align-items-center {
     align-items: center;
+}
+.resize-m {
+    width: 400px;
 }
 .absolute {
     position: absolute;
@@ -136,6 +179,9 @@ ul {
 }
 .grid-col-2 {
     grid-template-columns: repeat(2, 1fr);
+}
+.grid-col-3 {
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .primary-navigation {
