--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,12 @@
 :root {
     --clr-neutral-100: #fff;
     --clr-neutral-200: #f8f8f7;
+    --clr-neutral-700: #333;
     --clr-neutral-800: #202020;
     --clr-neutral-850: #181818;
     --clr-neutral-900: #000; 
 
-    --clr-secundairy-400: #cc8899;
+    --clr-accent-400: #cc8899;
 
     --ff-primary: Roboto, Arial;
 
@@ -18,22 +19,16 @@
     --fw-semi-bold: 500;
     --fw-bold: 700;
 
+    --fs-250: .8rem;
     --fs-300: 1rem;
     --fs-350: 1.25rem;
     --fs-400: 1.4rem;
     --fs-500: 1.8rem;
     --fs-600: 2.4rem;
-    --fs-625: 3rem;
-    --fs-650: 3.2rem;
-    --fs-700: 3.4rem;
-    --fs-800: 8rem;
-    --fs-900: 11.6rem;
 
     --fs-body: var(--fs-400);
     --fs-nav: var(--fs-300);
 }
-
-/* Utility */
 
 .text-neutral-100 {
     color: var(--clr-neutral-100);
@@ -50,7 +45,9 @@
 .text-neutral-900 {
     color: var(--clr-neutral-900);
 }
-
+.fs-250 {
+    font-size: var(--fs-250);
+}
 .fs-300 {
     font-size: var(--fs-300);
 }
@@ -63,6 +60,9 @@
 }
 .bg-neutral-200 {
     background-color: var(--clr-neutral-200);
+}
+.bg-neutral-700 {
+    background-color: var(--clr-neutral-700);
 }
 .bg-neutral-800 {
     background-color: var(--clr-neutral-800);
@@ -105,10 +105,10 @@ footer a {
 a {
     text-decoration: none;
     opacity: .8;
-    color: var(--clr-secundairy-400);
+    color: var(--clr-accent-400);
+    transition: all .3s ease-in-out;
 }
 a:hover {
-    transition: all .3s ease-in-out;
     opacity: 1;
 }
 ul {
@@ -130,8 +130,11 @@ h2 {
 .flex {
     display: flex;
 }
+.flex-col {
+    flex-direction: column;
+}
 .container {
-    max-width: 1800px;
+    max-width: 95%;
     margin: 0 auto;
     padding: 0 1rem;
 }
@@ -154,6 +157,12 @@ h2 {
 .padding-block-1 {
     padding-block: 1rem;
 }
+.padding-05 {
+    padding: .5rem;
+}
+.padding-1 {
+    padding: 1rem;
+}
 
 .icon-list > li {
     display: inline;
@@ -161,7 +170,7 @@ h2 {
 .image-col-2 > img {
     width: 400px;
 }
-.card > div img {
+.hobby > div img {
     width: auto;
     height: 500px;
 }
@@ -170,6 +179,9 @@ h2 {
 }
 .justify-content-center {
     justify-content: center;
+}
+.justify-content-end {
+    justify-content: end;
 }
 
 .text-center {
@@ -202,6 +214,9 @@ h2 {
 .grid-col-3 {
     grid-template-columns: repeat(3, 1fr);
 }
+.grid-col-4 {    
+    grid-template-columns: repeat(4, 1fr);
+}
 
 .primary-navigation {
     margin-left: 2rem;
@@ -210,3 +225,49 @@ h2 {
 .hamburger {
     display: none;
 }
+
+input,
+textarea {
+    width: 100%;
+}
+input:focus,
+textarea:focus {
+    outline: none;
+}
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+    border: 1px solid var(--clr-neutral-800);
+    padding: .3rem;
+    border-radius: 5px;
+}
+textarea {
+    resize: none;
+}
+.btn-primary {
+    background-color: var(--clr-accent-400);
+    color: var(--clr-neutral-100);
+    padding: .5rem 1rem;
+    border: none;
+    cursor: pointer;
+}
+.card {
+    border-radius: 10px;
+    transition: all .3s ease-in-out;
+}
+.card:hover {
+    transform: scale(1.05);
+}
+.wage-icon {
+    display: inline;
+    padding: .3rem 1rem;
+    background-color: var(--clr-neutral-100);
+    color: var(--clr-neutral-800);
+    border-radius: 20px;
+    font-weight: var(--fw-semi-bold);
+}
+
+
+
+
