--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ body {
     font-weight: var(--fw-regular);
     color: var(--clr-neutral-800);
     background-color: var(--clr-neutral-200);
+    overflow-x: hidden;
 }
 header {
     font-family: var(--ff-heading);
@@ -278,6 +279,11 @@ textarea {
     border-radius: 20px;
     font-weight: var(--fw-semi-bold);
 }
+.full-width {
+    width: 101vw;
+    margin-left: -55px;
+}
+
 
 /* breathing effect */
 .breathing {
